@@ -6,6 +6,8 @@ SilvaExternalSources changes
   2.1.4 (unreleased):
   
     Bugs Fixed:
+    
+     - fix DateTimeField as parameter support
 
   2.1.3 (09/17/2009):
   
